--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-body { font-size: 14px; line-height: 1.5; color: #333; font-family: Arial, 'Microsoft Yahei'; background: #FFF;}
 .inner { min-width: 500px; max-width: 960px;}
 
 .popup .inner { padding: 5px 10px 10px;}
@@ -9,28 +8,21 @@ h1 small { font-size: 14px; margin-left: 10px;}
 .popup h1 .checkbox { position: absolute; bottom: 0; right: 0; font-size: 14px;}
 .popup h1 small { font-weight: normal; font-size: 12px;}
 
-a { text-decoration: none; color: #FFA200;}
+a { text-decoration: none;}
 i.I { padding: 0 5px; color: #999;}
 
 .inner { padding: 20px;}
 
 .status-enabled { color: green;}
 .status-disabled { color: #cccccc;}
-
-label { cursor: pointer;}
-.field { margin-bottom: 10px;}
-.field label { display: inline-block; width: 80px; vertical-align: top; padding-top: 6px;}
 .bulkForm .field label { display: block; width: auto;}
-label.checkbox { width: auto; margin-right: 20px;}
-label small { font-size: 12px; font-weight: normal; color: #999; display: block; line-height: 1.8;}
 
 input, textarea, select { border: 1px solid #DDD; font-size: 12px; font-family: Arial, 'Microsoft Yahei';}
 input[type="text"] { font-size: 12px; height: 27px; line-height: 27px; padding: 1px 8px 0; width: 280px;}
 input:focus { outline: none; border-color: #999;}
 input[type="radio"], input[type="checkbox"] { position: relative; top: 1px;}
 input[type="submit"] { cursor: pointer; background: #3B8DBD; border-color: #3B8DBD; padding: 6px 10px; color: #FFF;}
-input[type="submit"]:hover { background: #FFA24F; border-color: #FFA24F;}
-textarea { width: 450px; height: 180px; padding: 5px 8px; line-height: 1.8;}
+textarea { width: 450px; height: 180px;}
 
 .tabNavs { margin-bottom: 15px; border-bottom: 1px solid #DDD;}
 .tabNavs a { display: inline-block; margin-left: 15px; padding: 4px 15px; border: 1px solid #DDD; position: relative; bottom: -1px;}
@@ -40,11 +32,6 @@ textarea { width: 450px; height: 180px; padding: 5px 8px; line-height: 1.8;}
 .tabConts .current { display: block;}
 
 .filter { padding: 10px 0; font-size: 12px;}
-
-table { width: 100%; border-top: 1px solid #DDD; border-collapse: collapse; border-bottom: 1px solid #DDD; margin-bottom: 10px; font-size: 12px;}
-td, th { padding: 8px 5px 6px;}
-th { text-align: left;}
-td { border-top: 1px solid #DDD; cursor: pointer;}
 tr:hover td { background: #E8F7ED;}
 
 tr .actions { display: none;}
@@ -60,8 +47,12 @@ tr:hover .actions { display: block;}
 .search input:focus { border-color: #333;}
 
 .bulkActions { font-size: 12px;}
-.bulkActions a { display: inline-block; margin-right: 5px; padding: 3px 10px; background: #3B8DBD; color: #FFF; border-radius: 3px;}
-.bulkActions a:hover { background: #FFA200;}
+.bulkActions a {cursor: pointer;background: #3B8DBD;border-color: #3B8DBD;padding: 6px 10px;color: #FFF;width: 37px;display: block;}
 #label-filter a { display: inline-block; margin-right: 8px;}
 #label-filter a.action { color: #000;}
 #btn_search { border-radius: 0 3px 3px 0;}
+
+*{font-size:12px;}input,textarea{border: #999 1px solid;}.w_60{width:60%;}
+.b{border: #999 1px solid;}.w200{width:200px;}.f{float:left;}.c{padding:5;margin:5;}
+.error{color:red;border-color:red;}bbb{color:#666}
+table{border-collapse:collapse;border:none;text-align:center;}td,th{border:solid #BCDCF1 1px;padding: 5px;}
